# hotshot

./: Cargo.toml  README.md
crates/hotshot-cli/: Cargo.toml
crates/hotshot-cli/src/: main.rs
crates/hotshot-core/: Cargo.toml
crates/hotshot-core/src/: clipboard.rs  config.rs  lib.rs  metadata.rs  storage.rs
crates/hotshot-core/src/capture/: mod.rs  wayland.rs  x11.rs
crates/hotshot-ui/: package.json  pnpm-lock.yaml  vite.config.ts
crates/hotshot-ui/src/: app.css  app.html
crates/hotshot-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/hotshot-ui/src-tauri/src/: lib.rs  main.rs  state.rs
crates/hotshot-ui/src-tauri/src/commands/: capture.rs  config.rs  mod.rs  monitors.rs  screenshots.rs
crates/hotshot-ui/src/lib/: api.ts  types.ts
crates/hotshot-ui/src/lib/components/: Canvas.svelte  CaptureMenu.svelte  Gallery.svelte  StatusBar.svelte  Toolbar.svelte
crates/hotshot-ui/src/lib/stores/: canvas.ts  gallery.ts  screenshot.ts  toolbar.ts
crates/hotshot-ui/src/routes/: +layout.svelte  +page.svelte
docs/: ROADMAP.md
