[package]
name = "hotshot-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hotshot"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["dep:hotshot-ui"]

[dependencies]
hotshot-core = { path = "../hotshot-core" }
hotshot-ui = { path = "../hotshot-ui/src-tauri", optional = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
