[package]
name = "hotshot-core"
version.workspace = true
edition.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
trash = "5"

# X11 capture
x11rb = { version = "0.13", features = ["allow-unsafe-code", "render", "randr"] }

# Wayland capture (XDG Desktop Portal)
ashpd = "0.10"
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }

# Clipboard
arboard = "3"
