[package]
name = "hotshot-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "hotshot_ui_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hotshot-core = { path = "../../hotshot-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
